got launcher working with new java/gradle.